--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>suraj-copycat-folio</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>TanCaoDev - Portfolio</title>
+    <meta name="description" content="Portfolio of Tan Cao - Frontend Developer" />
+    <meta name="author" content="Tan Cao" />
+    <link rel="icon" href="/my_picture.jpg" />
+    <link rel="preload" href="/my_picture.jpg" as="image" />
 
-    <meta property="og:title" content="suraj-copycat-folio" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="TanCaoDev - Portfolio" />
+    <meta property="og:description" content="Portfolio of Tan Cao - Frontend Developer" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/my_picture.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="TanCaoDev - Portfolio" />
+    <meta name="twitter:description" content="Portfolio of Tan Cao - Frontend Developer" />
+    <meta name="twitter:image" content="/my_picture.jpg" />
   </head>
 
   <body>
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
