feat: Update projects type

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TanCaoDev - Portfolio</title>
@@ -8,16 +8,18 @@
     <meta name="author" content="Tan Cao" />
     <link rel="icon" href="/my_picture.jpg" />
     <link rel="preload" href="/my_picture.jpg" as="image" />
+    <link rel="icon" href="/my_picture.jpg" type="image/x-icon" />
 
     <meta property="og:title" content="TanCaoDev - Portfolio" />
     <meta property="og:description" content="Portfolio of Tan Cao - Frontend Developer" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/my_picture.jpg" />
-  </head>
+</head>
 
-  <body>
+<body>
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script type="module" src="/src/main.tsx"></script>
-  </body>
+</body>
+
 </html>
